syntax = "proto3";

package telemetry.message.event;

import "google/protobuf/timestamp.proto";

option java_multiple_files = true;
option java_package = "ru.yandex.practicum.grpc.telemetry.event";

// Сообщение для данных датчика движения.
message MotionSensorProto {
  int32 link_quality = 1; // показатель качества связи; чем выше значение, тем лучше качество связи
  bool motion = 2;        // указание на наличие движения или чьего-то присутствия
  int32 voltage = 3;      // значение напряжения, которое может использоваться для оценки текущего напряжения в сенсоре или связанном устройстве
}

// Сообщение для данных температурного датчика.
message TemperatureSensorProto {
  int32 temperature_c = 1;   // уровень температуры по шкале Цельсия
  int32 temperature_f = 2; // уровень температуры по Фаренгейту
}

// Сообщение для данных датчика освещённости.
message LightSensorProto {
  int32 link_quality = 1; // уровень сигнала
  int32 luminosity = 2; // уровень освещённости
}

// Сообщение для данных климатического датчика.
message ClimateSensorProto {
  int32 temperature_c = 1; // уровень температуры по шкале Цельсия
  int32 humidity = 2;      // влажность
  int32 co2_level = 3;     // уровень CO2
}

// Сообщение для данных датчика переключателя.
message SwitchSensorProto {
  bool state = 1; // состояние переключателя: включён/выключен
}

// Основное сообщение для всех событий от датчиков.
message SensorEventProto {
  string id = 1; // идентификатор датчика
  google.protobuf.Timestamp timestamp = 2; // таймстемп события
  string hubId = 3; // идентификатор связанного хаба
  oneof payload {
    MotionSensorProto motion_sensor_event = 4;            // данные события датчика движения
    TemperatureSensorProto temperature_sensor_event = 5;  // данные события температурного датчика
    LightSensorProto light_sensor_event = 6;              // данные события датчика освещённости
    ClimateSensorProto climate_sensor_event = 7;          // данные события климатического датчика
    SwitchSensorProto switch_sensor_event = 8;            // данные события датчика-переключателя
  }
}